[VNA-686] [QTBUG-45110] Fix: Qt detaches from JNI threads it didn't attach